# rust-challenges

./: Cargo.toml  README.md  flake.nix
_1_zk_proof/: Cargo.toml  README.md  dlog_proof.py
_2_websocket_wasm/: Cargo.toml  README.md
_2_websocket_wasm/my_vite_web_app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
_2_websocket_wasm/my_vite_web_app/src/: index.tsx  ws_ping.ts
_2_websocket_wasm/src/: lib.rs
_2_websocket_wasm/tests/: web.rs
_3_sync_endpoint/: Cargo.toml  README.md
_3_sync_endpoint/src/: actor_party_matcher.rs  handlers.rs  main.rs
