

[workspace]
members = [
    "_1_zk_proof",
    "_2_websocket_wasm", 
    "_3_sync_endpoint"
]
resolver = "2"

[workspace.dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1.39", default-features = false }




[profile.release.package._2_websocket_wasm]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
