[package]
name = "_2_websocket_wasm"
version = "0.1.0"
authors = ["Nicolas Marshall <marshall.nicolas@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
futures = "^0.3"
js-sys = "^0.3"
web-sys = { version="^0.3", features=["WebSocket","BinaryType","Blob","ErrorEvent","FileReader","MessageEvent","ProgressEvent"] }
# gloo-timers = { version="0.3.0", features=["futures"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "^0.3"

# [profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"
